fixed image size and panel alignment

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,7 +17,7 @@
 @import "bootstrap";
 
 body {
-  padding-top: 60px;
+  padding-top: 80px;
 }
 
 // body {
